fix: update scroll down box height for improved visibility

--- a/src/app/landing-page/sections/a-hero/arrow-left/arrow-left.component.scss
+++ b/src/app/landing-page/sections/a-hero/arrow-left/arrow-left.component.scss
@@ -35,7 +35,7 @@
   }
 
   .scrollDownBox {
-    height: 48px;
+    height: 60px;
     width: 30px;
     border: 2px solid $color-highLight;
     border-radius: 50vh;
